<resources>
    <string name="app_name">Bodega BoraBora</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="contra">Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="registropregunta">¿No tienes una cuenta? Registrate</string>
    <string name="logintitulo">Login</string>
    <string name="pregunta">¿Olvidaste tu contraseña?</string>
    <string name="titulo1">Información Personal</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="documento">Documento de Identidad</string>
    <string name="celular">Número de celular</string>
    <string name="titulo2">Seguridad</string>
    <string name="correo">Correo electronico</string>
    <string name="condiciones">Condiciones de uso</string>
    <string name="condicion1">Autorizo al envió de promociones, así como informes de productos de BoraBora.</string>
    <string name="condicion2">Acepto el tratamiento de mis datos personales bajo condiciones de BoraBora.</string>
    <string name="btncrear">CREAR</string>
    <string name="n_contra">Confirme Nueva Contraseña</string>
    <string name="Contras">Ingrese Nueva Contraseña</string>
    <string name="btnactualizarcontra">Actualizar</string>
    <string name="titulocatalogo">Catalogo</string>
    <string name="grupo1">Frutas y verduras</string>
    <string name="grupo2">Cereales y granos</string>
    <string name="grupo3">Bebidas</string>
    <string name="grupo4">Carnes y embutidos</string>
    <string name="grupo5">Snacks</string>
    <string name="grupo6">Lacteos</string>
    <string name="añadir">Añadir más productos</string>
    <string name="subtotal">Subtotal</string>
    <string name="subprecio">S/ 0.0</string>
    <string name="igv">IGV</string>
    <string name="montototal">Total</string>
    <string name="metodo">Método de Pago</string>
    <string name="pago">Clic aquí para seleccionar tu \nmétodo de pago</string>
    <string name="carrito">Carrito de Compra</string>
    <string name="compra">COMPRA</string>

    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_compra">Compra</string>
    <string name="menu_historial_compra">Historial Compra</string>
    <string name="menu_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulohc">Historial de Compras</string>
    <string name="perfil">Editar Perfil</string>
    <string name="txtNroCompra">Compra Nº:</string>
    <string name="txtFCompra">Fecha de compra:</string>
    <string name="txtMPago">Método de pago:</string>
    <string name="txtTotal">Total:</string>
    <string name="titulodhc">Mi compra</string>
    <string name="metodopago">Método de Pago</string>
    <string name="tarjeta">Tarjeta de Credito</string>
    <string name="TIENDA">Recojo en tienda</string>
    <string name="infotarjecta">Ingrese la Información de su Tarjeta</string>
    <string name="btnaceptar">Aceptar</string>
    <string name="stringContacto">Contacto</string>
    <string name="valFinalizarCompra">Finalizar Compra</string>
</resources>